latex2mmlc/tests/snapshots/wiki_test__wiki171.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\mathit{0123456789}"
---
<math>
    <mi>0123456789</mi>
</math>
