latex2mmlc/tests/snapshots/wiki_test__wiki172.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\mathit{\\Alpha \\Beta \\Gamma \\Delta \\Epsilon \\Zeta \\Eta \\Theta}"
---
<math>
    <mi>𝛢𝛣𝛤𝛥𝛦𝛧𝛨𝛩</mi>
</math>
