latex2mmlc/tests/snapshots/wiki_test__wiki173.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\mathit{\\Iota \\Kappa \\Lambda \\Mu \\Nu \\Xi \\Omicron \\Pi}"
---
<math>
    <mi>𝛪𝛫𝛬𝛭𝛮𝛯𝛰𝛱</mi>
</math>
