latex2mmlc/tests/snapshots/wiki_test__wiki174.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\mathit{\\Rho \\Sigma \\Tau \\Upsilon \\Phi \\Chi \\Psi \\Omega}"
---
<math>
    <mi>𝛲𝛴𝛵𝛶𝛷𝛸𝛹𝛺</mi>
</math>
