latex2mmlc/tests/snapshots/wiki_test__wiki175.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\boldsymbol{\\varGamma \\varDelta \\varTheta \\varLambda}"
---
<math>
    <mi>𝜞𝜟𝜣𝜦</mi>
</math>
