latex2mmlc/tests/snapshots/wiki_test__wiki177.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\mathrm{ABCDEFGHI} \\\\ \\mathrm{JKLMNOPQR} \\\\ \\mathrm{STUVWXYZ} \\\\ \\mathrm{abcdefghijklm} \\\\ \\mathrm{nopqrstuvwxyz} \\\\ \\mathrm{0123456789}"
---
<math>
    <mi>ABCDEFGHI</mi>
    
    <mi>JKLMNOPQR</mi>
    
    <mi>STUVWXYZ</mi>
    
    <mi>abcdefghijklm</mi>
    
    <mi>nopqrstuvwxyz</mi>
    
    <mn>0123456789</mn>
</math>
