latex2mmlc/tests/snapshots/wiki_test__wiki178.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\mathsf{ABCDEFGHI} \\\\ \\mathsf{JKLMNOPQR} \\\\ \\mathsf{STUVWXYZ} \\\\ \\mathsf{abcdefghijklm} \\\\ \\mathsf{nopqrstuvwxyz} \\\\ \\mathsf{0123456789}"
---
<math>
    <mi>𝖠𝖡𝖢𝖣𝖤𝖥𝖦𝖧𝖨</mi>
    <mi>𝖩𝖪𝖫𝖬𝖭𝖮𝖯𝖰𝖱</mi>
    <mi>𝖲𝖳𝖴𝖵𝖶𝖷𝖸𝖹</mi>
    <mi>𝖺𝖻𝖼𝖽𝖾𝖿𝗀𝗁𝗂𝗃𝗄𝗅𝗆</mi>
    <mi>𝗇𝗈𝗉𝗊𝗋𝗌𝗍𝗎𝗏𝗐𝗑𝗒𝗓</mi>
    <mi>𝟢𝟣𝟤𝟥𝟦𝟧𝟨𝟩𝟪𝟫</mi>
</math>
