latex2mmlc/tests/snapshots/wiki_test__wiki179.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\mathsf{\\Alpha \\Beta \\Gamma \\Delta \\Epsilon \\Zeta \\Eta \\Theta}"
---
<math>
    <mi>ΑΒΓΔΕΖΗΘ</mi>
</math>
