latex2mmlc/tests/snapshots/wiki_test__wiki180.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\mathsf{\\Iota \\Kappa \\Lambda \\Mu \\Nu \\Xi \\Omicron \\Pi}"
---
<math>
    <mi>ΙΚΛΜΝΞΟΠ</mi>
</math>
