latex2mmlc/tests/snapshots/wiki_test__wiki181.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\mathsf{\\Rho \\Sigma \\Tau \\Upsilon \\Phi \\Chi \\Psi \\Omega}"
---
<math>
    <mi>ΡΣΤΥΦΧΨΩ</mi>
</math>
