latex2mmlc/tests/snapshots/wiki_test__wiki182.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\mathcal{ABCDEFGHI} \\\\ \\mathcal{JKLMNOPQR} \\\\ \\mathcal{STUVWXYZ} \\\\ \\mathcal{abcdefghi} \\\\ \\mathcal{jklmnopqr} \\\\ \\mathcal{stuvwxyz}"
---
<math>
    <mi>𝒜ℬ𝒞𝒟ℰℱ𝒢ℋℌ</mi>
    
    <mi>𝒥𝒦ℒℳ𝒩𝒪𝒫𝒬ℛ</mi>
    
    <mi>𝒮𝒯𝒰𝒱𝒲𝒳𝒴𝒵</mi>
    
    <mi>𝒶𝒷𝒸𝒹ℯ𝒻ℊ𝒽𝒾</mi>
    
    <mi>𝒿𝓀𝓁𝓂𝓃ℴ𝓅𝓆𝓇</mi>
    
    <mi>𝓈𝓉𝓊𝓋𝓌𝓍𝓎𝓏</mi>
</math>
